nav and update exchange staker
