# server/api/controllers/stake.js
@@ -359,6 +359,40 @@ const deleteExchangeStaker = (req, res) => {
 		});
 }
 
+const updateExchangeStaker = (req, res) => {
+	loggerStake.verbose(req.uuid, 'controllers/stake/updateExchangeStaker/auth', req.auth);
+
+	const { id, nav, reward } = req.swagger.params.data.value;
+
+	loggerStake.verbose(req.uuid, 'controllers/stake/updateExchangeStaker data', id, nav, reward);
+
+	const auditInfo = {
+		userEmail: req?.auth?.sub?.email,
+		sessionId: req?.session_id,
+		apiPath: req?.swagger?.apiPath,
+		method: req?.swagger?.operationPath?.[2]
+	};
+
+	toolsLib.stake.updateExchangeStaker(id, { nav, reward }, auditInfo)
+		.then((data) => {
+			toolsLib.user.createAuditLog(
+				{ email: req?.auth?.sub?.email, session_id: req?.session_id },
+				req?.swagger?.apiPath,
+				req?.swagger?.operationPath?.[2],
+				req?.swagger?.params?.data?.value
+			);
+			publisher.publish(INIT_CHANNEL, JSON.stringify({ type: 'refreshApi' }));
+			return res.json(data);
+		})
+		.catch((err) => {
+			loggerStake.error(req.uuid, 'controllers/stake/updateExchangeStaker err', err.message);
+			const messageObj = errorMessageConverter(err, req?.auth?.sub?.lang);
+			return res
+				.status(err.statusCode || 400)
+				.json({ message: messageObj?.message, lang: messageObj?.lang, code: messageObj?.code });
+		});
+};
+
 const unstakeEstimateSlash = (req, res) => {
 	loggerStake.verbose(req.uuid, 'controllers/stake/unstakeEstimateSlash/auth', req.auth);
 
@@ -493,6 +527,7 @@ module.exports = {
 	getExchangeStakersForUser,
 	createStaker,
 	deleteExchangeStaker,
+	updateExchangeStaker,
 	unstakeEstimateSlash,
 	unstakeEstimateSlashAdmin,
 	fetchStakeAnalytics,
